k8s/api.yml
---
kind: Service
apiVersion: v1
metadata:
  name: loalang-api
spec:
  type: NodePort
  selector:
    app: loalang-api
  ports:
    - port: 80
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loalang-api
  template:
    metadata:
      labels:
        app: loalang-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: docker.pkg.github.com/loalang/loalang.xyz/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              protocol: TCP
