k8s/pkg.yml
---
kind: Service
apiVersion: v1
metadata:
  name: loalang-pkg
spec:
  type: NodePort
  selector:
    app: loalang-pkg
  ports:
    - port: 80
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pkg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loalang-pkg
  template:
    metadata:
      labels:
        app: loalang-pkg
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pkg
          image: docker.pkg.github.com/loalang/loalang.xyz/pkg:latest
          ports:
            - containerPort: 9092
              protocol: TCP
