k8s/web.yml
---
kind: Service
apiVersion: v1
metadata:
  name: loalang-web
spec:
  type: NodePort
  selector:
    app: loalang-web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loalang-web
  template:
    metadata:
      labels:
        app: loalang-web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: docker.pkg.github.com/loalang/loalang.xyz/web:latest
          ports:
            - containerPort: 80
              protocol: TCP
