k8s/ingress_production.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: loalang-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.loalang.xyz
        - loalang.xyz
      secretName: api-tls
  rules:
    - host: api.loalang.xyz
      http:
        paths:
          - backend:
              serviceName: loalang-api
              servicePort: 80
    - host: loalang.xyz
      http:
        paths:
          - backend:
              serviceName: loalang-web
              servicePort: 80
